crates/swc_ecma_parser/tests/test262-error-references/fail/f75c659650787893.js.stderr
error: Trailing comma is not allowed
 --> $DIR/tests/test262-parser/fail/f75c659650787893.js:1:6
  |
1 | const
  |      ^

